@@ -2,36 +2,38 @@ package com.HHive.hhive.domain.party.service;
 
 import com.HHive.hhive.domain.hive.entity.Hive;
 import com.HHive.hhive.domain.hive.repository.HiveRepository;
+import com.HHive.hhive.domain.party.dto.MemberResponseDTO;
+import com.HHive.hhive.domain.party.dto.PartyRequestDTO;
+import com.HHive.hhive.domain.party.dto.PartyResponseDTO;
 import com.HHive.hhive.domain.party.entity.Party;
 import com.HHive.hhive.domain.party.repository.PartyRepository;
-import com.HHive.hhive.domain.party.request.PartyRequestDTO;
-import com.HHive.hhive.domain.party.response.PartyResponseDTO;
+import com.HHive.hhive.domain.relationship.partyuser.entity.PartyUser;
+import com.HHive.hhive.domain.relationship.partyuser.pk.PartyUserPK;
+import com.HHive.hhive.domain.relationship.partyuser.repository.PartyUserRepository;
 import com.HHive.hhive.domain.user.dto.UserInfoResponseDTO;
 import com.HHive.hhive.domain.user.entity.User;
-import com.HHive.hhive.global.exception.party.HiveNotFoundException;
-import com.HHive.hhive.global.exception.party.PartyNotFoundException;
+import com.HHive.hhive.global.exception.hive.NotFoundHiveException;
+import com.HHive.hhive.global.exception.party.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class PartyService {
 
     private final PartyRepository partyRepository;
-
     private final HiveRepository hiveRepository;
+    private final PartyUserRepository partyUserRepository;
 
 
     public PartyResponseDTO createParty(Long hiveId, PartyRequestDTO dto, User user) {
         Hive hive = hiveRepository.findById(hiveId)
-                .orElseThrow(HiveNotFoundException::new);
+                .orElseThrow(NotFoundHiveException::new);
 
         Party party = new Party(hive, dto, user);
         party.setUser(user);
@@ -40,29 +42,39 @@ public class PartyService {
 
         return new PartyResponseDTO(saved);
     }
-    public Party getParty(Long partyId) {
-        return partyRepository.findById(partyId)
-                .orElseThrow(PartyNotFoundException::new);
-    }
+
+    //단건 조회
+    @Transactional
     public PartyResponseDTO getPartyDto(Long partyId) {
-        Party party = getParty(partyId);
-        return new PartyResponseDTO(party);
+        Party party = partyRepository.findById(partyId).orElseThrow(PartyNotFoundException::new);
+
+        List<MemberResponseDTO> members = partyUserRepository.findUsersByPartyId(partyId).stream()
+            .map(partyUser -> new MemberResponseDTO(partyUser.getUser().getUsername(), partyUser.getUser().getEmail()))
+            .collect(Collectors.toList());
+
+        return new PartyResponseDTO(party.getId(), party.getTitle(), party.getUsername(), party.getContent(), party.getCreatedAt(), party.getModifiedAt(), members);
     }
 
+    //전체 조회
+    @Transactional
     public Map<UserInfoResponseDTO, List<PartyResponseDTO>> getUserPartyMap() {
         Map<UserInfoResponseDTO, List<PartyResponseDTO>> userPartyMap = new HashMap<>();
 
-        List<Party> partyList = partyRepository.findAll(Sort.by(Sort.Direction.DESC, "createdAt")); // 작성일 기준 내림차순
+        List<Party> partyList = partyRepository.findAll(Sort.by(Sort.Direction.DESC, "createdAt"));
+        for (Party party : partyList) {
+            UserInfoResponseDTO userDto = new UserInfoResponseDTO(party.getUser());
+            List<MemberResponseDTO> members = partyUserRepository.findUsersByPartyId(party.getId()).stream()
+                    .map(partyUser -> new MemberResponseDTO(partyUser.getUser().getUsername(), partyUser.getUser().getEmail()))
+                    .collect(Collectors.toList());
 
-        partyList.forEach(party -> {
-            var userDto = new UserInfoResponseDTO(party.getUser());
-            var partyDto = new PartyResponseDTO(party);
+            PartyResponseDTO partyDto = new PartyResponseDTO(party.getId(), party.getTitle(), party.getUsername(), party.getContent(), party.getCreatedAt(), party.getModifiedAt(), members);
+
             if (userPartyMap.containsKey(userDto)) {
                 userPartyMap.get(userDto).add(partyDto);
             } else {
-                userPartyMap.put(userDto, new ArrayList<>(List.of(partyDto)));
+                userPartyMap.put(userDto, new ArrayList<>(Collections.singletonList(partyDto)));
             }
-        });
+        }
 
         return userPartyMap;
     }
@@ -80,7 +92,11 @@ public class PartyService {
     @Transactional
     public void deleteParty(Long partyId, User user) {
         Party party = getUserParty(partyId, user);
-        partyRepository.delete(party);
+        if (!party.getHostId().equals(user.getId())) {
+            throw new UnauthorizedAccessException();
+        }
+        party.setIsDeleted(true);
+        partyRepository.save(party);
     }
 
     private Party getUserParty(Long partyId, User user) {
@@ -88,6 +104,39 @@ public class PartyService {
                 .orElseThrow(PartyNotFoundException::new);
     }
 
+    @Transactional
+    public void joinParty(Long partyId, User user) {
+        Party party = getUserParty(partyId, user);
+
+        // 파티 호스트가 파티에 가입하는 것을 방지
+        if (party.getHostId().equals(user.getId())) {
+            throw new PartyHostNotJoinException();
+        }
+
+        // 중복 가입 검사
+        if (partyUserRepository.existsByUserIdAndPartyId(user.getId(), partyId)) {
+            throw new AlreadyJoinException();
+        }
+        else {
+            PartyUser partyUser = new PartyUser(user, party);
+            partyUserRepository.save(partyUser);
+        }
+    }
+
+    @Transactional
+    public void resignParty(Long partyId, User user) {
+        Party party = getUserParty(partyId, user);
+
+        if (party.getHostId().equals(user.getId())) {
+            throw new PartyHostNotResignException();
+        }
+        // 파티 가입 여부 검사
+        if (!partyUserRepository.existsByPartyUserPK_UserIdAndPartyUserPK_PartyId(user.getId(), party.getId())) {
+            throw new PartyNotResignException();
+        }
+        // 파티 탈퇴 처리
+        PartyUserPK partyUserPK = new PartyUserPK(user.getId(), party.getId());
+        partyUserRepository.deleteById(partyUserPK);
+    }
 
 }
-
